# OpenTTD-savegame-reader

./: README.md  asset-manifest.json  index.html  requirements.txt
.github/workflows/: ghpages.yaml
savegame_reader/: gui.py  savegame.py
static/css/: 3.44d809a4.chunk.css  3.44d809a4.chunk.css.map
static/js/: 0.242b4748.chunk.js  0.242b4748.chunk.js.map  0.43b8a681.chunk.js  0.43b8a681.chunk.js.map  0.73d9ec4b.chunk.js  0.73d9ec4b.chunk.js.map  0.a7aa7335.chunk.js  0.a7aa7335.chunk.js.map  0.aef14641.chunk.js  0.aef14641.chunk.js.map  0.c8ac8435.chunk.js  0.c8ac8435.chunk.js.map  0.f2ab631b.chunk.js  0.f2ab631b.chunk.js.map  3.042c5c03.chunk.js  3.042c5c03.chunk.js.map  3.0820caad.chunk.js  3.0820caad.chunk.js.map  3.bd8c894a.chunk.js  3.bd8c894a.chunk.js.map  4.5fb9d515.chunk.js  4.5fb9d515.chunk.js.map  4.7fcd8503.chunk.js  4.7fcd8503.chunk.js.map  4.e1d277f9.chunk.js  4.e1d277f9.chunk.js.map  5.271551e0.chunk.js  5.271551e0.chunk.js.map  5.4223b4fd.chunk.js  5.4223b4fd.chunk.js.map  5.8d359aac.chunk.js  5.8d359aac.chunk.js.map  5.974ec848.chunk.js  5.974ec848.chunk.js.map  5.ada27e55.chunk.js  5.ada27e55.chunk.js.map  5.baf6a2d5.chunk.js  5.baf6a2d5.chunk.js.map  5.f0e377bd.chunk.js  5.f0e377bd.chunk.js.map  (+24 more)
webapp/web/: package-lock.json  package.json
webapp/web/src/: Savegame.tsx  Viewer.tsx
webapp/xz-rust/: Cargo.toml
webapp/xz-rust/src/: lib.rs
